@@ -6,6 +6,7 @@
 (gnc:depend "options-utilities.scm")
 
 ;; reports 
+(gnc:depend "report/net-barchart.scm")
 (gnc:depend "report/account-summary.scm")
 (gnc:depend "report/average-balance.scm")
 (gnc:depend "report/balance-sheet.scm")
